# cuda-kernel-engineering

./: .gitignore  README.md  pyproject.toml
backend_compare/: PLAN.md  README.md
backend_compare/benchmarks/: bench_backend.py  bench_streaming_backend.py
backend_compare/docs/: nsight_vllm.md
backend_compare/prompts/: decode_japanese.txt
backend_compare/scripts/: request_vllm_qwen35_profile.sh  request_vllm_qwen35_stream_profile.sh  run_ollama_qwen35.sh  run_vllm_qwen35.sh  start_vllm_qwen35.sh  start_vllm_qwen35_nsys.sh  start_vllm_qwen35_nsys_request_only.sh
decode_gemv/: DESIGN.md  PLAN.md  README.md
decode_gemv/benchmarks/: bench_gemv.py  bench_projection_block.py  bench_projection_types.py  profile_gemv.py  tune_projection_types.py  tune_triton_gemv.py
decode_gemv/scripts/: run_bench.sh  run_nsight.sh  run_projection_block.sh  run_projection_types.sh  run_triton_bench.sh  tune_projection_types.sh  tune_triton.sh
decode_projection_fusion/: ARTICLE_OUTLINE.md  DESIGN.md  HANDOFF.md  OSS_UPSTREAM_PLAN.md  PLAN.md  README.md  vllm_upstream_patch_draft.md
decode_projection_fusion/benchmarks/: analyze_copy_context.py  analyze_nsys_kernels.py  bench_copy_add_mul.py  bench_gemma_rmsnorm.py
decode_projection_fusion/scripts/: analyze_copy_context.sh  analyze_vllm_request_window.sh  inspect_vllm_sources.sh  (+6 more)
docker/: start_vllm.sh  stop_vllm.sh
elementwise_fusion/: DESIGN.md  PLAN.md  README.md
mini_decoder_kv/: PLAN.md  README.md
mini_llm_decode/: PLAN.md  README.md
mini_transformer_block/: PLAN.md  README.md
rmsnorm/: DESIGN.md  PLAN.md  README.md
(+114 files in other folders)
