[project]
name = "cuda-kernel-rmsnorm-lab"
version = "0.1.0"
description = "RMSNorm and fused residual RMSNorm kernel experiments on RTX 4070"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ninja==1.13.0",
    "numpy==2.4.6",
    "torch==2.11.0+cu128",
    "triton==3.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
